*******************************************************************************
                          CloverETL Engine - HISTORY of RELEASES
*******************************************************************************

REL-4-0-5
---------

* FIXES:
	- CloverDataWriter may report invalid checksum on append
	- Different behavior of DBInputTable with declared variable in TSQL between versions
	- DBOutputTable does not commit with Commit=MAX_INT
	- HTTPConnector returns WARN message even when successful status code is received
	- DBOutputTable does not use not most current version of query specified via Query URL

REL-4-0-4
---------

* FIXES:
	- Readers fail with "max number of records" when reading from input port
	- Proper reporting of graph configuration errors (avoiding duplicates)
	- XMLExtract - " character is escaped to &quot (missing semicolon)
	- Exported custom component attribute reports nonexistent warning
* COMPATIBILITY:
	- Propagation of metadata defined by SQL does not work
	- UniversalDataWriter: 'Create directories' cannot handle encoded URL

REL-4-0-3
---------

* FIXES:
	- Invalid CloverData format
	- "Create directories" does not work in UniversalDataWriter when using 
	Dictionary as file URL

REL-4-0-2
---------

* Changed priority of edge-based explicit metadata propagation
* FIXES:
    -  Tracking on edges with no record   

REL-4-0-1
---------

* FIXES:
	- HTTPConnector behaves differently in Clover 4 - authentication fails

REL-4-0-0
---------

* TableauWriter component
* explicit metadata propagation
* improved CloverDataReader and CloverDataWriter
	- compression
	- consistency with other readers and writers (e.g. partitioning)
* CTL function to get sandbox-prefixed path
* New CTL2 container functions - toMap() and getValues()
* Added and improved bit operation functions
* CTL function to access custom component properties
* FIXES:
	- SortWithinGroup is losing records
	- CTL2 performance issues in locale and timezone manipulation