@@ -192,6 +192,10 @@ public class SQLCloverStatement {
 	 * @throws SQLException
 	 */
 	public void init() throws ComponentNotReadyException, SQLException{
+		if (isInitialized) {
+			return;
+		}
+		
 		SQLScriptParser preprocessor = new SQLScriptParser(query, SQLScriptParser.DEFAULT_SQL_DELIMITER);
         preprocessor.setBackslashQuoteEscaping(connection.getJdbcSpecific().isBackslashEscaping());
         preprocessor.setRequireLastDelimiter(false);
@@ -203,8 +207,12 @@ public class SQLCloverStatement {
         } catch (IOException e) {
         	throw new ComponentNotReadyException(e);
         }
+        
+        if (!connection.getJdbcSpecific().supportsTerminatingSemicolons()) {
+        	// CLO-6561 : some databases do not accept queries terminated by semicolons
+        	cleanQuery = SQLUtil.stripTerminatingSemicolons(cleanQuery);
+        }
 		
-		if (isInitialized) return;
 		int ri = indexOfReturning(cleanQuery);
 		if (ri != -1 && autoGeneratedColumn != null) {
 			logger.warn("Autogenerated columns defined in both \"sqlQuery\" and "
