@@ -2,6 +2,12 @@
                           CloverETL Engine - HISTORY of RELEASES
 *******************************************************************************
 
+REL-4-0-6
+---------
+
+* FIXES:
+	- SQL queries ending with semicolon cause graphs failures
+
 REL-4-0-5
 ---------
 
